# dwm-statusbar

./: .clang-format  .codeclimate.yml  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  config.hpp  main.cpp
src/external_api/dwm/: CMakeLists.txt
src/external_api/dwm/include/external_api/: Dwm.hpp
src/external_api/dwm/include/external_api/dwm/: Dwm.hpp
src/external_api/dwm/src/: Dwm.cpp
src/interfaces/: CMakeLists.txt
src/interfaces/battery_interface/: CMakeLists.txt
src/interfaces/battery_interface/include/interfaces/battery_interface/: BatteryInterface.hpp  ConcreteBatteryInterface.hpp
src/interfaces/battery_interface/src/: ConcreteBatteryInterface.cpp
src/interfaces/dwm_interface/: CMakeLists.txt
src/interfaces/dwm_interface/include/interfaces/dwm_interface/: ConcreteDwmInterface.hpp  DwmInterface.hpp
src/interfaces/dwm_interface/src/: ConcreteDwmInterface.cpp
src/interfaces/time_interface/: CMakeLists.txt
src/interfaces/time_interface/include/interfaces/time_interface/: ConcreteTimeInterface.hpp  TimeInterface.hpp
src/interfaces/time_interface/src/: ConcreteTimeInterface.cpp
src/modules/: CMakeLists.txt
src/modules/battery/: CMakeLists.txt
src/modules/battery/include/modules/: Battery.hpp  BatteryInterface.hpp  BatteryLevel.hpp  BatteryStatus.hpp  ConcreteBatteryInterface.hpp
src/modules/battery/include/modules/battery/: Battery.hpp
src/modules/battery/src/: Battery.cpp  BatteryLevel.cpp  BatteryStatus.cpp  ConcreteBatteryInterface.cpp
src/modules/separator/: CMakeLists.txt
src/modules/separator/include/modules/: Separator.hpp
src/modules/separator/src/: Separator.cpp
src/modules/time/: CMakeLists.txt
src/modules/time/include/modules/: Time.hpp  UpTime.hpp
src/modules/time/include/modules/time/: Time.hpp
src/modules/time/src/: Time.cpp  UpTime.cpp
src/status_bar/: BarSegment.cpp  CMakeLists.txt
src/status_bar/include/status_bar/: BarSegment.hpp  StatusBar.hpp
src/status_bar/src/: StatusBar.cpp
src/types/: CMakeLists.txt
src/types/include/types/: BatteryStatus.hpp  BatteryStatusLabels.hpp  Module.hpp
src/types/include/types/modules/: Module.hpp
src/types/src/: Module.cpp
tests/: CMakeLists.txt
tests/helpers/mocks/: CMakeLists.txt
tests/helpers/mocks/include/helpers/mocks/: BatteryInterfaceMock.hpp  TimeInterfaceMock.hpp
tests/ut/: CMakeLists.txt
tests/ut/modules/: CMakeLists.txt
tests/ut/modules/battery/: BatteryLevelTests.cpp  BatteryStatusTests.cpp  CMakeLists.txt
tests/ut/modules/time/: CMakeLists.txt  TimeModuleTests.cpp  UpTimeModuleTests.cpp
